[project]
name = "home-8"
version = "0.1.0"
description = ""
authors = [
    {name = "Diablo7749",email = "26012003.mark@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
